--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,27 +65,17 @@ body {
   display: inline-block;
   transform: scaleX(2);
   transform-origin: left;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .font-parent:hover .font-wide {
   transform: scaleX(1);
   font-weight: 700;
-  transition: all 300ms ease;
 }
 
-.font-rest {
-  margin-left: 28px;
-  transition: all 350ms ease;
+.transition {
+  transition: all 400ms ease;
 }
-
-.font-parent:hover .font-rest {
-  margin-left: 0;
-}
-
-/* .font-parent:hover .font-not-wide {
-  padding-left: 0;
-} */
 
 .outline {
   color: transparent;
@@ -94,15 +84,6 @@ body {
   stroke-linejoin: round;
   stroke-miterlimit: 10;
 }
-
-/* 
-.font-hero {
-  font-size: clamp(2rem, 80vh, 4.5rem);
-}
-
-.font-hero-small {
-  font-size: clamp(1rem, 1.5rem, 2rem);
-} */
 
 .noise-overlay {
   position: absolute;
