--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,6 +13,7 @@
   --granola: #702c63;
   --moviedux: #cf6a0d;
   --tidytouch: #688f4a;
+  --wyr: #4a60ab;
 
   --font-poppins: "Poppins", ui-sans-serif, system-ui, sans-serif;
   --font-inconsolata: "Inconsolata", ui-sans-serif, system-ui, sans-serif;
@@ -27,6 +28,7 @@
   --granola: #d954be;
   --moviedux: #ff7a00;
   --tidytouch: #88be60;
+  --wyr: #6f8ae1;
 }
 
 body {
